# doc-sanitizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SKILL.md  pyproject.toml
.claude/: settings.local.json
skills/: SKILL.md
src/doc_sanitizer/: __init__.py
